[tool.poetry]
name = "flaskpoetry"
version = "0.1.0"
description = "Flask Application Package using poetry."
license = "MIT"
authors = ["Jimmy Briggs <jimmy.briggs@jimbrig.com>"]
maintainers = ["Jimmy Briggs <jimmy.briggs@jimbrig.com>"]
homepage = "https://docs.jimbrig.com/flaskpoetry"
repository = "https://github.com/jimbrig/flaskpoetry"
readme = "README.md"
documentation = "https://docs.jimbrig.com/flaskpoetry"
keywords = ["flask", "poetry", "python", "jimbrig"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "flaskpoetry" },
    { include = "flaskpoetry.*" },
]
include = [
  "CHANGELOG.md"
]

[tool.poetry.scripts]
flaskpoetry = "flaskpoetry:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/jimbrig/flaskpoetry/issues"
"Source Code" = "https://github.com/jimbrig/flaskpoetry"
"Documentation" = "https://docs.jimbrig.com/flaskpoetry"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
click = "^8.1.3"
flask-admin = "^1.6.1"
flask-assets = "^2.0"
flask-apispec = "^0.11.4"
dynaconf = "^3.1.12"
flask-bcrypt = "^1.0.1"
flask-migrate = "^4.0.4"
flask-db = "^0.3.2"
flask-htmlmin = "^2.2.1"
flask-httpauth = "^4.7.0"
py-healthcheck = "^1.10.1"
flask-marshmallow = "^0.14.0"
flask-login = "^0.6.2"
flask-monitoringdashboard = "^3.1.1"
flask-wtf = "^1.1.1"
gunicorn = "^20.1.0"
pyodbc = "^4.0.35"
python-dotenv = "^1.0.0"
pandas = "^1.5.3"
plotly = "^5.13.1"
jinja2 = "^3.1.2"
werkzeug = "^2.2.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
flake8 = "*"
pylint = "*"
black = "*"
flask-debugtoolbar = "*"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
